# HOI4-AI

./: .gitignore  README.md  build_fast_ocr.py  check_learning.py  check_recordings.py  find_text_regions_dxcam.py  fix_brain.py  language_ai_v1.py  main.py  main_understanding.py  organize_project.py  pyproject.toml  record_gameplay_fixed.py  record_gameplay_with_ocr.py  requirements.txt  run_understanding_ai.py  setup_ocr.py  test_cpp_setup.py  test_fast_ocr.py  test_full_system.py  test_gpu.py  test_import.py  test_ocr.py  test_ocr_integration.py  test_ocr_output.txt  test_phi4_mini_reasoning.py  test_ultimate.py  view_complete.py
config/: agent.toml
docs/: v4-design.md
experiments/: capture_hoi4.py  find_text_regions.py  find_text_regions_v2.py  iterative_learner_ultra.py  iterative_learner_v1.py  iterative_learner_v2_enhanced.py  record_gameplay.py  test_setup.py  view_recording.py  view_recording_fixed.py
hoi4-ai-v3/: agent.py  benchmark.py  config.yaml  executor.py  requirements.txt  vision.py
hoi4_agent/: __init__.py  calibration.py  config.py  context.py  enums.py  errors.py  geometry.py  schemas.py  testing.py
hoi4_agent/brain/: llm.py  (+6 more)
models/: learning_stats.json  strategic_learning_stats.json  ultra_stats.json  ultra_v2_stats.json
src/: __init__.py  config.py
tests/: conftest.py  test_agent.py  test_brain.py  test_config.py  test_controller.py  test_eval.py  test_executor.py  test_geometry.py  test_integration.py  test_ncc.py  test_playbook.py  test_schemas.py  test_smoke_offline.py  test_tools.py  test_trace.py  test_vision.py  test_windows.py
(+78 files in other folders)
