[project]
name = "hoi4-agent"
version = "0.1.0"
description = "HOI4-AI v4 — Windows-native, closed-loop vision agent for Hearts of Iron IV"
requires-python = ">=3.11"
# Minimal deps by design: stdlib + these. No opencv / pydantic / pyyaml / pywin32 / onnxruntime.
dependencies = [
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
